Match-id-b8df92eb8222ce1f3ad92d9e765d7ca20d34a358

--- a/mindx-dl/deploy/online/cluster/init_kubernetes.yaml
+++ b/mindx-dl/deploy/online/cluster/init_kubernetes.yaml
@@ -112,7 +112,7 @@
     - name: Join into cluster
       shell:
         cmd:
-          unset http_proxy https_proxy && hostvars["KUBERNETES_JOIN_COMMAND"]["join_command"]
+          unset http_proxy https_proxy && {{hostvars["KUBERNETES_JOIN_COMMAND"]["join_command"]}}
       tags: init-workers
       when:
         - ansible_default_ipv4['address'] != master_ip
