Match-id-f8db99e44d32d46d876542143bce7b7d992a9c3e

--- a/mindx-dl/deploy/online/online_join_cluster.yaml
+++ b/mindx-dl/deploy/online/online_join_cluster.yaml
@@ -1,4 +1,4 @@
-# Copyright © Huawei Technologies CO., Ltd. 2020-2020. All rights reserved
+# Copyright © Huawei Technologies Co., Ltd. 2020. All rights reserved.
 ---
 - hosts: new_node
   remote_user: root
