--- a/mindx-dl/deploy/online/cluster/online_install_package.yaml
+++ b/mindx-dl/deploy/online/cluster/online_install_package.yaml
@@ -1,4 +1,4 @@
-# Copyright © Huawei Technologies CO., Ltd. 2020-2020. All rights reserved
+# Copyright © Huawei Technologies Co., Ltd. 2020. All rights reserved.
 ---
 # This playbook is used to online install software packages, including NFS.
 
