Match-id-4f23d74aca4ea3573e800dd1b6bc2a7603f87044

--- a/mindx-dl/deploy/online/cluster/online_load_images.yaml
+++ b/mindx-dl/deploy/online/cluster/online_load_images.yaml
@@ -85,6 +85,7 @@
         - vc-controller-manager_arm64.tar.gz
         - vc-scheduler_arm64.tar.gz
         - vc-webhook-manager_arm64.tar.gz
+        - vc-webhook-manager-base_arm64.tar.gz
         - hccl-controller_arm64.tar.gz
       when: ansible_architecture == "aarch64"
       tags:
@@ -99,6 +100,7 @@
         - vc-controller-manager_amd64.tar.gz
         - vc-scheduler_amd64.tar.gz
         - vc-webhook-manager_amd64.tar.gz
+        - vc-webhook-manager-base_amd64.tar.gz
         - hccl-controller_amd64.tar.gz
       when: ansible_architecture == "x86_64"
       tags:
@@ -151,6 +153,7 @@
           docker pull {{item}}
       with_items:
         - "{{ascend_hub_prefix}}/vc-controller-manager_arm64:{{volcano_version}}"
+        - "{{ascend_hub_prefix}}/vc-controller-manager-base_arm64:{{volcano_version}}"
         - "{{ascend_hub_prefix}}/vc-scheduler_arm64:{{volcano_version}}"
         - "{{ascend_hub_prefix}}/vc-webhook-manager_arm64:{{volcano_version}}"
         - "{{ascend_hub_prefix}}/hccl-controller_arm64:{{hccl_version}}"
@@ -164,6 +167,7 @@
           docker pull {{item}}
       with_items:
         - "{{ascend_hub_prefix}}/vc-controller-manager_amd64:{{volcano_version}}"
+        - "{{ascend_hub_prefix}}/vc-controller-manager-base_amd64:{{volcano_version}}"
         - "{{ascend_hub_prefix}}/vc-scheduler_amd64:{{volcano_version}}"
         - "{{ascend_hub_prefix}}/vc-webhook-manager_amd64:{{volcano_version}}"
         - "{{ascend_hub_prefix}}/hccl-controller_amd64:{{hccl_version}}"
@@ -177,6 +181,7 @@
           docker tag {{item}}
       with_items:
         - "{{ascend_hub_prefix}}/vc-controller-manager_arm64:{{volcano_version}} volcanosh/vc-controller-manager:{{volcano_version}}"
+        - "{{ascend_hub_prefix}}/vc-controller-manager-base_arm64:{{volcano_version}} volcanosh/vc-controller-manager-base:{{volcano_version}}"
         - "{{ascend_hub_prefix}}/vc-scheduler_arm64:{{volcano_version}} volcanosh/vc-scheduler:{{volcano_version}}"
         - "{{ascend_hub_prefix}}/vc-webhook-manager_arm64:{{volcano_version}} volcanosh/vc-webhook-manager:{{volcano_version}}"
         - "{{ascend_hub_prefix}}/hccl-controller_arm64:{{hccl_version}} hccl-controller:{{hccl_version}}"
@@ -190,6 +195,7 @@
           docker tag {{item}}
       with_items:
         - "{{ascend_hub_prefix}}/vc-controller-manager_amd64:{{volcano_version}} volcanosh/vc-controller-manager:{{volcano_version}}"
+        - "{{ascend_hub_prefix}}/vc-controller-manager-base_amd64:{{volcano_version}} volcanosh/vc-controller-manager-base:{{volcano_version}}"
         - "{{ascend_hub_prefix}}/vc-scheduler_amd64:{{volcano_version}} volcanosh/vc-scheduler:{{volcano_version}}"
         - "{{ascend_hub_prefix}}/vc-webhook-manager_amd64:{{volcano_version}} volcanosh/vc-webhook-manager:{{volcano_version}}"
         - "{{ascend_hub_prefix}}/hccl-controller_amd64:{{hccl_version}} hccl-controller:{{hccl_version}}"
@@ -424,6 +430,7 @@
         - cruse/etcd-arm64:3.4.3-0
         - coredns/coredns:1.6.5
         - "{{ascend_hub_prefix}}/vc-controller-manager_arm64:{{volcano_version}}"
+        - "{{ascend_hub_prefix}}/vc-controller-manager-base_arm64:{{volcano_version}}"
         - "{{ascend_hub_prefix}}/vc-scheduler_arm64:{{volcano_version}}"
         - "{{ascend_hub_prefix}}/vc-webhook-manager_arm64:{{volcano_version}}"
         - "{{ascend_hub_prefix}}/hccl-controller_arm64:{{hccl_version}}"
@@ -444,6 +451,7 @@
         - cruse/etcd-amd64:3.4.3-0
         - coredns/coredns:1.6.5
         - "{{ascend_hub_prefix}}/vc-controller-manager_amd64:{{volcano_version}}"
+        - "{{ascend_hub_prefix}}/vc-controller-manager-base_amd64:{{volcano_version}}"
         - "{{ascend_hub_prefix}}/vc-scheduler_amd64:{{volcano_version}}"
         - "{{ascend_hub_prefix}}/vc-webhook-manager_amd64:{{volcano_version}}"
         - "{{ascend_hub_prefix}}/hccl-controller_amd64:{{hccl_version}}"
